[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pianoled-converter"
version = "0.1.0"
description = "Convert piano MusicXML files to MIDI for interactive learning software."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "mido>=1.3,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
pianoled-converter = "pianoled_converter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pianoled_converter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
